--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-
   },
   "keywords": [],
   "author": "",
@@ -13,8 +12,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "redis": "^4.7.0"
   }
 }
