--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "body-parser": "^1.20.3",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "redis": "^4.7.0"
+    "express-session": "^1.18.1"
   }
 }
